--- a/style.css
+++ b/style.css
@@ -53,10 +53,11 @@ body {
 
     font-size: 16px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    height: 100vh;
-    width: 100vw;
+    height:fit-content;
+    width: fit-content;
     display: grid;
     grid-template: minmax(100px, 1fr) minmax(500px, 4fr) / 200px minmax(700px, 3fr);
+    overflow: scroll;
 }
 
 h5 {
@@ -74,7 +75,7 @@ h5 {
     background: var(--color);
     display: grid;
     grid-template:  repeat(3, min-content) / 10px;
-    gap: 75px;
+    gap: 40px;
     padding: 15px;
 }
 
@@ -89,11 +90,21 @@ img {
     width: var(--size);
 }
 
+
 a {
     text-decoration: none;
     color: inherit;
     white-space: nowrap;
+}
 
+.bigger {
+    font-size: 22px;
+    align-items: center;
+}
+
+.big-img {
+    height: 35px;
+    width: 35px;
 }
 
 .side-container {
@@ -198,3 +209,56 @@ header {
     font-size: 20px;
     font-weight: 600;
 }
+
+/* Main content styling */
+
+main {
+    padding: 30px 20px 50px 20px;;
+    display: grid;
+    grid-template: 3fr 2fr / 5fr 2fr;
+}
+
+.projects {
+    grid-row-end: span 2;
+}
+
+.projects {
+    display: grid;
+    grid-template: min-content 1fr / repeat(auto-fit, minmax(200px, 1fr));
+    gap: 20px;
+    grid-auto-rows: 1fr;
+}
+
+.projects > div {
+    background: white;
+    display: grid;
+    border-radius: 10px;
+    grid-template-columns: 10px 1fr;
+}
+
+main > div > p {
+    grid-column: 1 / -1;
+}
+
+.color {
+    grid-row: 1 / -1;
+border-radius: 10px 0px 0px 10px;
+background: black
+}
+
+.container {
+    display: grid;
+    padding: 25px 15px;
+    grid-template: min-content 1fr min-content / 1fr repeat(3, min-content);
+    gap: 5px 20px;
+}
+
+.container > h5, .container > p {
+    grid-column: 1 / -1;
+}
+
+.container > p {color: #4b5563}
+.container > img:first-of-type {
+    grid-column: 2;
+}
+/* .container > * {border: 1px solid red} */
